--- a/winterSeason.html
+++ b/winterSeason.html
@@ -1,19 +1,24 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="style.css">
 		<title>Winter Pick</title>
 	</head>
 	<body>
 		<div id="fruits">
+			<p id="demo"></p>	
 		</div>
-			<div id="category1">
+		
+		<div id="createReceipt">
+		<button type="button">Receipt</button>
+		</div>
+			<!-- <div id="category1">
 			</div>
 			<div id="category2">
 			</div>
 			<div id="category3">
 			</div>
 			<div id="category4">
-			</div>
+			</div> -->
 		<script src="season.js"></script>
 	</body>
 </html>
